# arcs-decision-receipts

./: .gitignore  deep-activate.html  index.html  package.json
.github/workflows/: deploy-arcs-app.yml
arcs-app/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
arcs-app/app/: globals.css  layout.tsx  page.tsx
arcs-app/app/api/analyze/: route.ts
arcs-app/app/api/waitlist/: route.ts
arcs-app/app/jean-claude/: page.tsx
arcs-app/lib/: arcs.ts
arcs-decision-receipts/: README.md  kryptonite_scorer.py  pyproject.toml  requirements.txt  waveform_optimizer.py
arcs-decision-receipts/.github/workflows/: ci.yml
arcs-decision-receipts/examples/: decision_receipt_sample.json
arcs-decision-receipts/src/arcs_decision_receipts/: __init__.py  kryptonite_scorer.py  waveform_optimizer.py
arcs-decision-receipts/tests/: test_kryptonite_scorer.py  test_waveform_optimizer.py
gold-coast/: README.md  report-no-hash.md  report.md  report.sha256  verify-report.sh
gold-coast/.github/workflows/: verify-report.yml
monomath-compiler/: middleware.ts  package-lock.json  package.json  todo.md
monomath-compiler/app/: globals.css  layout.tsx
monomath-compiler/app/api/signals/: route.ts
monomath-compiler/components/: DashboardLayout.tsx  DysonCore.tsx  ExecutiveFunction.tsx  PrismView.tsx  SignalStream.tsx
monomath-compiler/lib/: supabase.ts  types.ts
monomath-compiler/n8n/: workflow-blueprint.json
monomath-compiler/supabase/: schema.sql
monomath-compiler/utils/supabase/: middleware.ts  server.ts
(+1 files in other folders)
