[project]
name = "arcs-decision-receipts"
version = "0.1.0"
description = "ARCS Catalyst Framework & Kryptonite Scorer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

